# witty-service

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  coverage.json  pyproject.toml
.githooks/: pre-commit
.github/workflows/: e2e-tests.yml  enterprise-check-migrations.yml  fe-e2e-tests.yml  ghcr-build.yml  openhands-resolver.yml  py-tests.yml  release.yml
alembic/: env.py
alembic/versions/: 20260407_01_init_agentd_schema.py  20260520_01_add_session_metadata_columns.py  20260622_01_add_session_runtime_identity_columns.py  20260624_01_add_compatibility_column.py
docs/: agentd-service-design.md  e2e-testing-guide.md  witty-service-websocket-adaptor-design.md
frontend/src/i18n/: translation.json
frontend/src/keyboard-shortcuts/: index.ts  use-keyboard-shortcuts.ts
frontend/src/routes/: served-tab.tsx
frontend/src/stores/: conversation-store.ts
openhands/app_server/: v1_router.py
openhands/app_server/agent/: agent_manager.py  agent_router.py  logging_config.py  sqlite_store.py
openhands/app_server/event/: event_router.py
openhands/app_server/notification/: __init__.py
openhands/app_server/sandbox/: docker_sandbox_service.py  sandbox_router.py  sandbox_spec_router.py  sandbox_spec_service.py
openhands/core/: setup.py
openhands/integrations/: provider.py  service_types.py  utils.py
openhands/integrations/gitcode/: __init__.py  gitcode_service.py
src/witty_agent_server/: __init__.py  app.py  main.py
src/witty_agent_server/adapters/: openclaw_adapter.py  runtime_registry.py
src/witty_agent_server/application/: __init__.py  runtime_bundle.py  runtime_factory.py
src/witty_agent_server/logger/: logging_config.py
src/witty_agent_server/runtimes/: openclaw_gateway_runtime.py  opencode_runtime.py  runtime_base.py
src/witty_service/: __init__.py  cli.py  config.py  logger.py  main.py  workspace_init.py
src/witty_service/adapter/: __init__.py  exceptions.py  http_client.py  insight_client.py  schemas.py  websocket_client.py  websocket_client_pool.py  websocket_protocol.py
src/witty_service/api/: __init__.py  agents.py  auth.py  backport.py  backport_schemas.py  cve.py  cve_schemas.py  errors.py  insight.py  insight_schemas.py  mcp_servers.py  models.py  schemas.py  services.py  skills.py
src/witty_service/application/: __init__.py  agent_manager.py  agent_template_service.py  awesome_openclaw_sync.py  backport_cvekit_client.py  backport_git_client.py  backport_service.py  cve_service.py  insight_facade.py  insight_health_matcher.py  session_manager.py  skill_manager.py
src/witty_service/domain/: __init__.py  agent_template.py  enums.py  errors.py  models.py
src/witty_service/persistence/: db.py  orm.py  repositories.py
tests/e2e/: test_agent_lifecycle_e2e.py  test_message_stream_sse.py  test_session_proxy_e2e.py  test_websocket_adaptor.py
tests/unit/: conftest.py  test_adapter_init.py  test_agent_manager_ws.py  test_agent_skills_api.py  test_agent_template.py  test_agents_api_messages.py  test_auth.py  test_backport_api.py  test_config.py  test_cve_api.py  test_insight_api.py  test_logger.py  test_main.py  test_mcp_servers_api.py  test_messages_stream_api.py  test_models_api.py  test_openclaw_gateway_client.py  test_openclaw_gateway_runtime.py  test_sandbox_base.py  test_sandbox_docker.py  test_sandbox_e2b.py  test_sandbox_local_process.py  test_services.py  test_session_manager.py  test_session_ws_orchestrator.py  test_skill_client.py  test_skills_api.py  test_websocket_client.py  test_websocket_client_pool.py  test_websocket_exceptions.py  test_websocket_protocol.py  test_workspace_init.py  test_workspace_store.py
witty-service/: README.md  alembic.ini  pyproject.toml
witty-service/alembic/: env.py
witty-service/alembic/versions/: 20260407_01_init_agentd_schema.py
witty-service/src/: config.py  main.py
witty-service/src/adapter/: __init__.py  http_client.py  websocket_client.py  websocket_client_pool.py
witty-service/src/api/: __init__.py  agents.py  auth.py  cve.py  errors.py  models.py  schemas.py  services.py
witty-service/src/application/: agent_manager.py  cve_service.py  session_manager.py
witty-service/src/persistence/: orm.py  repositories.py
witty-service/src/sandbox/: local_process.py
witty-service/src/storage/: workspace_store.py
witty-service/tests/e2e/: test_message_stream_sse.py
witty-service/tests/unit/: test_agent_manager.py  test_agent_manager_ws.py  test_messages_stream_api.py  test_runtime_e2b.py  test_sse_relay.py  test_state_machine.py  test_workspace_store.py
(+94 files in other folders)
